feat(docker): Enhance build script with improved error handling, directory creation, and configuration file checks; update docker-compose for consistent PHP_DISPLAY_ERRORS setting; modify vhost.conf to support CDN in Content Security Policy.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
       APACHE_DOCUMENT_ROOT: /var/www/app/web
       # PHP
       PHP_MEMORY_LIMIT: ${PHP_MEMORY_LIMIT:-512M}
-      PHP_DISPLAY_ERRORS: ${PHP_DISPLAY_ERRORS:-On}
+      PHP_DISPLAY_ERRORS: ${PHP_DISPLAY_ERRORS:-on}
       PHP_MAX_EXECUTION_TIME: ${PHP_MAX_EXECUTION_TIME:-60}
       PHP_POST_MAX_SIZE: ${PHP_POST_MAX_SIZE:-100M}
       PHP_UPLOAD_MAX_FILESIZE: ${PHP_UPLOAD_MAX_FILESIZE:-100M}
@@ -94,7 +94,7 @@ services:
     environment:
       APACHE_DOCUMENT_ROOT: /var/www/app/web
       PHP_MEMORY_LIMIT: ${PHP_MEMORY_LIMIT:-256M}
-      PHP_DISPLAY_ERRORS: Off
+      PHP_DISPLAY_ERRORS: off
       PHP_MAX_EXECUTION_TIME: ${PHP_MAX_EXECUTION_TIME:-30}
       PHP_POST_MAX_SIZE: ${PHP_POST_MAX_SIZE:-50M}
       PHP_UPLOAD_MAX_FILESIZE: ${PHP_UPLOAD_MAX_FILESIZE:-50M}
