--- a/src/flavor/apache/etc/vhost.conf
+++ b/src/flavor/apache/etc/vhost.conf
@@ -122,6 +122,9 @@
 
         # Content Security Policy for Yii2 applications
         Header always set Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self'; frame-ancestors 'self'"
+
+        # If using CDNs like jsDelivr, adjust CSP accordingly
+        Header always set Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; img-src 'self' data: https:; font-src 'self' data: https://cdn.jsdelivr.net; connect-src 'self'; frame-ancestors 'self'"
     </IfModule>
 
     # Browser caching with mod_expires
