--- a/src/flavor/apache/Dockerfile.apache
+++ b/src/flavor/apache/Dockerfile.apache
@@ -31,6 +31,24 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
+# Create necessary directories and set permissions
+RUN mkdir -p \
+    /etc/apache2/ssl \
+    /var/cache/apache2 \
+    /var/lock/apache2 \
+    /var/run/apache2 \
+    /var/run/php \
+    /var/lib/php/sessions \
+    /var/lib/php/tmp \
+    && chown -R www-data:www-data \
+    /etc/apache2/ssl \
+    /var/cache/apache2 \
+    /var/lock/apache2 \
+    /var/run/apache2 \
+    /var/lib/php \
+    /var/run/php \
+    && chmod 755 /etc/apache2/ssl /var/cache/apache2
+
 # Install install-php-extensions
 ADD --chmod=0755 \
     https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions \
@@ -52,10 +70,6 @@ RUN install-php-extensions \
 # Enable Apache modules
 RUN a2enmod rewrite headers expires ssl proxy proxy_fcgi http2 \
     && a2dissite 000-default
-
-# Create directories
-RUN mkdir -p /var/run/php /var/lib/php/sessions /var/lib/php/tmp \
-    && chown -R www-data:www-data /var/lib/php /var/run/php
 
 # Configure sudo for www-data to allow privilege escalation for initialization
 RUN echo "www-data ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers.d/www-data \
@@ -154,7 +168,7 @@ ENV BUILD_TYPE=${BUILD_TYPE} \
 COPY src/flavor/apache/etc/apache2.conf /etc/apache2/apache2.conf
 COPY src/flavor/apache/etc/security-enhanced.conf /etc/apache2/conf-available/
 COPY src/flavor/apache/etc/vhost.conf /etc/apache2/sites-available/yii2.conf
-COPY src/php-fpm/docker.conf /usr/local/etc/php-fpm.d/zz-app.conf
+COPY src/php-fpm/docker.conf /usr/local/etc/php-fpm.d/zz-docker.conf
 COPY src/php/${BUILD_TYPE}.ini /usr/local/etc/php/conf.d/99-app.ini
 COPY src/supervisor/conf.d/*.conf /etc/supervisor/conf.d/
 COPY src/supervisor/supervisord.conf /etc/supervisor/
@@ -162,11 +176,6 @@ COPY src/supervisor/supervisord.conf /etc/supervisor/
 # Copy scripts
 COPY src/script/common/ /usr/local/bin/common/
 COPY src/script/entrypoint.sh /usr/local/bin/entrypoint
-
-# Apply production overrides
-RUN if [ "$BUILD_TYPE" = "prod" ]; then \
-        cat src/php-fpm/prod.conf >> /usr/local/etc/php-fpm.d/zz-app.conf; \
-    fi
 
 # Enable site and security configurations
 RUN a2ensite yii2 \
