--- a/src/flavor/apache/etc/vhost.conf
+++ b/src/flavor/apache/etc/vhost.conf
@@ -63,10 +63,10 @@
         Require all granted
     </Directory>
 
-    # PHP-FPM configuration via TCP port (fallback)
+    # PHP-FPM configuration using Unix socket
     <FilesMatch "\.php$">
         <If "-f %{REQUEST_FILENAME}">
-            SetHandler "proxy:fcgi://127.0.0.1:9000"
+            SetHandler "proxy:unix:/var/run/php/php-fpm.sock|fcgi://localhost"
         </If>
     </FilesMatch>
 
