--- a/src/php-fpm/docker.conf
+++ b/src/php-fpm/docker.conf
@@ -1,46 +1,46 @@
 ;==============================================================================
-; PHP-FPM Docker Configuration - Optimized
+; PHP-FPM Configuration
 ;==============================================================================
 
 [global]
 daemonize = no
 error_log = /proc/self/fd/2
-log_level = warning
-; Process control timeout for systemd compatibility
+log_level = ${PHP_FPM_LOG_LEVEL:-warning}
 process_control_timeout = 10
 
 [www]
-; Unix socket is faster and more secure for local communication
+; Socket configuration - Unix socket for better performance
 listen = /var/run/php/php-fpm.sock
 listen.owner = www-data
 listen.group = www-data
 listen.mode = 0660
 
-; Process management - Optimized for containers
-pm = dynamic
+; Process management - adapts to environment via variables
+pm = ${PHP_FPM_PM:-dynamic}
 pm.max_children = ${PHP_FPM_MAX_CHILDREN:-20}
 pm.start_servers = ${PHP_FPM_START_SERVERS:-2}
 pm.min_spare_servers = ${PHP_FPM_MIN_SPARE:-1}
 pm.max_spare_servers = ${PHP_FPM_MAX_SPARE:-3}
 pm.max_requests = ${PHP_FPM_MAX_REQUESTS:-500}
-pm.process_idle_timeout = 10s
+pm.process_idle_timeout = ${PHP_FPM_IDLE_TIMEOUT:-10s}
 
-; Status monitoring (dev/test only)
-ping.path = /fpm-ping
-ping.response = pong
-pm.status_path = /fpm-status
+; Status monitoring - disable in prod via environment variable
+ping.path = ${PHP_FPM_PING_PATH:-/fpm-ping}
+pm.status_path = ${PHP_FPM_STATUS_PATH:-/fpm-status}
 
 ; Request handling
 request_slowlog_timeout = ${PHP_SLOWLOG_TIMEOUT:-5s}
 request_terminate_timeout = ${PHP_REQUEST_TIMEOUT:-30}
 slowlog = /proc/self/fd/2
 
-; PHP Settings
+; PHP Settings - adapts to environment
 php_admin_flag[display_errors] = ${PHP_DISPLAY_ERRORS:-off}
+php_admin_flag[display_startup_errors] = ${PHP_DISPLAY_STARTUP_ERRORS:-off}
 php_admin_flag[log_errors] = on
 php_admin_value[error_log] = /proc/self/fd/2
 php_admin_value[error_reporting] = ${PHP_ERROR_REPORTING:-E_ALL & ~E_DEPRECATED & ~E_STRICT}
 php_admin_value[max_execution_time] = ${PHP_MAX_EXECUTION_TIME:-30}
+php_admin_value[max_input_time] = ${PHP_MAX_INPUT_TIME:-60}
 php_admin_value[memory_limit] = ${PHP_MEMORY_LIMIT:-256M}
 php_admin_value[post_max_size] = ${PHP_POST_MAX_SIZE:-50M}
 php_admin_value[upload_max_filesize] = ${PHP_UPLOAD_MAX_FILESIZE:-50M}
@@ -48,12 +48,19 @@ php_admin_value[upload_max_filesize] = ${PHP_UPLOAD_MAX_FILESIZE:-50M}
 ; Session configuration
 php_value[session.save_handler] = ${PHP_SESSION_HANDLER:-files}
 php_value[session.save_path] = ${PHP_SESSION_PATH:-/var/lib/php/sessions}
+php_value[session.cookie_httponly] = 1
+php_value[session.use_strict_mode] = 1
 
 ; Security
 php_admin_value[expose_php] = off
 php_admin_value[cgi.fix_pathinfo] = 0
+php_admin_value[disable_functions] = ${PHP_DISABLE_FUNCTIONS:-}
 
-; Output
+; Temporary directories
+php_value[sys_temp_dir] = /var/lib/php/tmp
+php_value[upload_tmp_dir] = /var/lib/php/tmp
+
+; Output control
 catch_workers_output = ${PHP_CATCH_OUTPUT:-yes}
 decorate_workers_output = no
 clear_env = no
@@ -61,3 +68,7 @@ clear_env = no
 ; Resource limits
 rlimit_files = ${PHP_RLIMIT_FILES:-131072}
 rlimit_core = 0
+
+; Access log - can be disabled in prod
+access.log = ${PHP_FPM_ACCESS_LOG:-/proc/self/fd/1}
+access.format = "%R - %u %t \"%m %r%Q%q\" %s %{mili}d %{kilo}M %C%%"
