feat(docker): Update PHP and Apache configurations for improved performance and security; enhance Dockerfile and vhost.conf for better SSL handling and HTTP/2 support; refactor PHP-FPM settings for dynamic environment variables; remove obsolete PHP configuration script.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       # Vendor directory for faster installs
       - vendor:/var/www/app/vendor:delegated
       # Runtime directories
-      - ./runtime/ssl:/etc/apache2/ssl:ro
+      - ./runtime/ssl:/etc/apache2/ssl
       - ./runtime:/var/www/app/runtime:delegated
     environment:
       # Apache
