--- a/src/flavor/apache/etc/vhost.conf
+++ b/src/flavor/apache/etc/vhost.conf
@@ -169,5 +169,186 @@
     SetEnvIf Request_URI "^/health$" no_log
 </VirtualHost>
 
-# Note: HTTPS configuration has been disabled for this setup
-# To enable HTTPS with HTTP/2, SSL certificates need to be properly configured
+# HTTPS Virtual Host with HTTP/2 Support
+<VirtualHost *:443>
+    ServerAdmin webmaster@localhost
+    DocumentRoot /var/www/app/web
+
+    # Enable HTTP/2 and HTTP/1.1 over SSL
+    Protocols h2 http/1.1
+
+    # SSL Configuration
+    SSLEngine on
+    SSLCertificateFile /etc/apache2/ssl/cert.pem
+    SSLCertificateKeyFile /etc/apache2/ssl/key.pem
+
+    # Modern SSL/TLS Configuration
+    SSLProtocol -all +TLSv1.2 +TLSv1.3
+    SSLCipherSuite ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384
+    SSLHonorCipherOrder off
+    SSLSessionTickets off
+
+    # HSTS (HTTP Strict Transport Security)
+    <IfModule mod_headers.c>
+        Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
+    </IfModule>
+
+    # Directory configuration with enhanced security (same as HTTP)
+    <Directory /var/www/app/web>
+        Options -Indexes +FollowSymLinks
+        AllowOverride All
+        Require all granted
+
+        # HTTP method restrictions
+        <LimitExcept GET POST HEAD OPTIONS>
+            Require all denied
+        </LimitExcept>
+
+        # Yii2 URL rewriting
+        <IfModule mod_rewrite.c>
+            RewriteEngine On
+
+            # Block common exploit attempts
+            RewriteCond %{QUERY_STRING} (\<|%3C).*script.*(\>|%3E) [NC,OR]
+            RewriteCond %{QUERY_STRING} GLOBALS(=|\[|\%[0-9A-Z]{0,2}) [OR]
+            RewriteCond %{QUERY_STRING} _REQUEST(=|\[|\%[0-9A-Z]{0,2}) [OR]
+            RewriteCond %{QUERY_STRING} proc/self/environ [OR]
+            RewriteCond %{QUERY_STRING} mosConfig_[a-zA-Z_]{1,21}(=|\%3D) [OR]
+            RewriteCond %{QUERY_STRING} base64_(en|de)code[^(]*\([^)]*\) [OR]
+            RewriteCond %{QUERY_STRING} (<|%3C)([^s]*s)+cript.*(>|%3E) [NC,OR]
+            RewriteCond %{QUERY_STRING} (\<|%3C).*iframe.*(\>|%3E) [NC]
+            RewriteRule .* - [F,L]
+
+            # Block suspicious user agents
+            RewriteCond %{HTTP_USER_AGENT} ^$ [OR]
+            RewriteCond %{HTTP_USER_AGENT} ^(java|curl|wget) [NC,OR]
+            RewriteCond %{HTTP_USER_AGENT} (libwww|lwp-trivial|echo|bot|wget|curl|python|perl|scan) [NC]
+            RewriteRule .* - [F,L]
+
+            # Redirect trailing slashes if not a directory
+            RewriteCond %{REQUEST_FILENAME} !-d
+            RewriteCond %{REQUEST_URI} (.+)/$
+            RewriteRule ^ %1 [L,R=301]
+
+            # Send all non-existing files to index.php
+            RewriteCond %{REQUEST_FILENAME} !-f
+            RewriteCond %{REQUEST_FILENAME} !-d
+            RewriteRule . index.php [L]
+        </IfModule>
+
+        # Deny access to hidden files except .well-known
+        <FilesMatch "^\.">
+            Require all denied
+        </FilesMatch>
+    </Directory>
+
+    # Allow .well-known directory for Let's Encrypt
+    <Directory /var/www/app/web/.well-known>
+        Require all granted
+    </Directory>
+
+    # PHP-FPM configuration using Unix socket
+    <FilesMatch "\.php$">
+        <If "-f %{REQUEST_FILENAME}">
+            SetHandler "proxy:unix:/var/run/php/php-fpm.sock|fcgi://localhost"
+        </If>
+    </FilesMatch>
+
+    # Protect sensitive directories and files
+    <DirectoryMatch "/var/www/app/(runtime|vendor|tests|config|models|controllers|commands|migrations|mail|widgets)">
+        Require all denied
+    </DirectoryMatch>
+
+    # Enhanced protection for sensitive files
+    <FilesMatch "^(composer\.(json|lock)|package\.(json|lock)|\.env.*|yii|yii\.bat|requirements\.php|web\.config|\.htaccess)$">
+        Require all denied
+    </FilesMatch>
+
+    # Protect version control and CI/CD files
+    <FilesMatch "^(\.git.*|\.gitlab-ci\.yml|\.github.*|Dockerfile.*|docker-compose.*|\.dockerignore)$">
+        Require all denied
+    </FilesMatch>
+
+    # Protect backup and log files
+    <FilesMatch "\.(bak|backup|old|tmp|temp|log|logs|swp|swo|~)$">
+        Require all denied
+    </FilesMatch>
+
+    # Enhanced security headers
+    <IfModule mod_headers.c>
+        # Cache control for static assets
+        <FilesMatch "\.(ico|jpg|jpeg|png|gif|webp|svg|woff|woff2|ttf|eot|css|js)$">
+            Header set Cache-Control "public, max-age=31536000, immutable"
+            Header unset ETag
+            FileETag None
+        </FilesMatch>
+
+        # Cache control for HTML/PHP
+        <FilesMatch "\.(html|php)$">
+            Header set Cache-Control "no-cache, no-store, must-revalidate"
+            Header set Pragma "no-cache"
+            Header set Expires "0"
+        </FilesMatch>
+
+        # Enhanced security headers
+        Header always set X-Frame-Options "SAMEORIGIN"
+        Header always set X-Content-Type-Options "nosniff"
+        Header always set X-XSS-Protection "1; mode=block"
+        Header always set Referrer-Policy "strict-origin-when-cross-origin"
+
+        # Remove server information
+        Header always unset "X-Powered-By"
+        Header unset "X-Powered-By"
+        Header always unset "Server"
+
+        # Additional security headers
+        Header always set Permissions-Policy "camera=(), microphone=(), geolocation=()"
+
+        # Content Security Policy for Yii2 applications
+        Header always set Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self'; frame-ancestors 'self'"
+
+        # If using CDNs like jsDelivr, adjust CSP accordingly
+        Header always set Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; img-src 'self' data: https:; font-src 'self' data: https://cdn.jsdelivr.net; connect-src 'self'; frame-ancestors 'self'"
+    </IfModule>
+
+    # Browser caching with mod_expires
+    <IfModule mod_expires.c>
+        ExpiresActive On
+        ExpiresDefault "access plus 1 month"
+
+        # Images
+        ExpiresByType image/jpeg "access plus 1 year"
+        ExpiresByType image/gif "access plus 1 year"
+        ExpiresByType image/png "access plus 1 year"
+        ExpiresByType image/webp "access plus 1 year"
+        ExpiresByType image/svg+xml "access plus 1 year"
+        ExpiresByType image/x-icon "access plus 1 year"
+        ExpiresByType image/vnd.microsoft.icon "access plus 1 year"
+
+        # CSS and JavaScript
+        ExpiresByType text/css "access plus 1 year"
+        ExpiresByType application/javascript "access plus 1 year"
+        ExpiresByType application/x-javascript "access plus 1 year"
+
+        # Fonts
+        ExpiresByType font/ttf "access plus 1 year"
+        ExpiresByType font/otf "access plus 1 year"
+        ExpiresByType font/woff "access plus 1 year"
+        ExpiresByType font/woff2 "access plus 1 year"
+        ExpiresByType application/font-woff "access plus 1 year"
+        ExpiresByType application/font-woff2 "access plus 1 year"
+        ExpiresByType application/vnd.ms-fontobject "access plus 1 year"
+
+        # HTML and PHP - no cache
+        ExpiresByType text/html "access plus 0 seconds"
+        ExpiresByType text/x-php "access plus 0 seconds"
+        ExpiresByType application/xhtml+xml "access plus 0 seconds"
+    </IfModule>
+
+    # Logging
+    ErrorLog /proc/self/fd/2
+    CustomLog /proc/self/fd/1 combined env=!no_log
+
+    # Don't log health checks
+    SetEnvIf Request_URI "^/health$" no_log
+</VirtualHost>
