--- a/src/php-fpm/docker.conf
+++ b/src/php-fpm/docker.conf
@@ -3,72 +3,74 @@
 ;==============================================================================
 
 [global]
+; Global settings
 daemonize = no
 error_log = /proc/self/fd/2
-log_level = ${PHP_FPM_LOG_LEVEL:-warning}
+log_level = ${PHP_FPM_LOG_LEVEL}
 process_control_timeout = 10
 
 [www]
 ; Socket configuration - Unix socket for better performance
 listen = /var/run/php/php-fpm.sock
-listen.owner = www-data
 listen.group = www-data
 listen.mode = 0660
+listen.owner = www-data
 
 ; Process management - adapts to environment via variables
-pm = ${PHP_FPM_PM:-dynamic}
-pm.max_children = ${PHP_FPM_MAX_CHILDREN:-20}
-pm.start_servers = ${PHP_FPM_START_SERVERS:-2}
-pm.min_spare_servers = ${PHP_FPM_MIN_SPARE:-1}
-pm.max_spare_servers = ${PHP_FPM_MAX_SPARE:-3}
-pm.max_requests = ${PHP_FPM_MAX_REQUESTS:-500}
+pm = ${PHP_FPM_PM}
+pm.max_children = ${PHP_FPM_MAX_CHILDREN}
+pm.max_requests = ${PHP_FPM_MAX_REQUESTS}
+pm.max_spare_servers = ${PHP_FPM_MAX_SPARE}
+pm.min_spare_servers = ${PHP_FPM_MIN_SPARE}
 pm.process_idle_timeout = ${PHP_FPM_IDLE_TIMEOUT:-10s}
+pm.start_servers = ${PHP_FPM_START_SERVERS}
 
 ; Status monitoring - disable in prod via environment variable
-ping.path = ${PHP_FPM_PING_PATH:-/fpm-ping}
-pm.status_path = ${PHP_FPM_STATUS_PATH:-/fpm-status}
+ping.path = ${PHP_FPM_PING_PATH}
+pm.status_path = ${PHP_FPM_STATUS_PATH}
 
 ; Request handling
-request_slowlog_timeout = ${PHP_SLOWLOG_TIMEOUT:-5s}
-request_terminate_timeout = ${PHP_REQUEST_TIMEOUT:-30}
+request_slowlog_timeout = ${PHP_SLOWLOG_TIMEOUT}
+request_terminate_timeout = ${PHP_REQUEST_TIMEOUT}
 slowlog = /proc/self/fd/2
 
-; PHP Settings - adapts to environment
-php_admin_flag[display_errors] = ${PHP_DISPLAY_ERRORS:-off}
-php_admin_flag[display_startup_errors] = ${PHP_DISPLAY_STARTUP_ERRORS:-off}
+; =============================================================================
+; PHP Settings - Runtime configurable via environment variables
+; These override any values in stage-specific .ini files
+; =============================================================================
+php_admin_flag[display_errors] = ${PHP_DISPLAY_ERRORS}
+php_admin_flag[display_startup_errors] = ${PHP_DISPLAY_STARTUP_ERRORS}
 php_admin_flag[log_errors] = on
 php_admin_value[error_log] = /proc/self/fd/2
-php_admin_value[error_reporting] = ${PHP_ERROR_REPORTING:-E_ALL & ~E_DEPRECATED & ~E_STRICT}
-php_admin_value[max_execution_time] = ${PHP_MAX_EXECUTION_TIME:-30}
-php_admin_value[max_input_time] = ${PHP_MAX_INPUT_TIME:-60}
-php_admin_value[memory_limit] = ${PHP_MEMORY_LIMIT:-256M}
-php_admin_value[post_max_size] = ${PHP_POST_MAX_SIZE:-50M}
-php_admin_value[upload_max_filesize] = ${PHP_UPLOAD_MAX_FILESIZE:-50M}
+php_admin_value[error_reporting] = ${PHP_ERROR_REPORTING}
+php_admin_value[expose_php] = ${PHP_EXPOSE}
+php_admin_value[max_execution_time] = ${PHP_MAX_EXECUTION_TIME}
+php_admin_value[max_input_time] = ${PHP_MAX_INPUT_TIME}
+php_admin_value[memory_limit] = ${PHP_MEMORY_LIMIT}
+php_admin_value[post_max_size] = ${PHP_POST_MAX_SIZE}
+php_admin_value[upload_max_filesize] = ${PHP_UPLOAD_MAX_FILESIZE}
 
-; Session configuration
-php_value[session.save_handler] = ${PHP_SESSION_HANDLER:-files}
-php_value[session.save_path] = ${PHP_SESSION_PATH:-/var/lib/php/sessions}
-php_value[session.cookie_httponly] = 1
-php_value[session.use_strict_mode] = 1
+; Session configuration - runtime configurable
+php_value[session.save_handler] = ${PHP_SESSION_HANDLER}
+php_value[session.save_path] = ${PHP_SESSION_PATH}
 
-; Security
-php_admin_value[expose_php] = off
+; Security - runtime configurable
 php_admin_value[cgi.fix_pathinfo] = 0
-php_admin_value[disable_functions] = ${PHP_DISABLE_FUNCTIONS:-}
+php_admin_value[disable_functions] = ${PHP_DISABLE_FUNCTIONS}
 
 ; Temporary directories
 php_value[sys_temp_dir] = /var/lib/php/tmp
 php_value[upload_tmp_dir] = /var/lib/php/tmp
 
 ; Output control
-catch_workers_output = ${PHP_CATCH_OUTPUT:-yes}
-decorate_workers_output = no
+catch_workers_output = ${PHP_CATCH_OUTPUT}
 clear_env = no
+decorate_workers_output = no
 
 ; Resource limits
-rlimit_files = ${PHP_RLIMIT_FILES:-131072}
 rlimit_core = 0
+rlimit_files = ${PHP_RLIMIT_FILES}
 
 ; Access log - can be disabled in prod
-access.log = ${PHP_FPM_ACCESS_LOG:-/proc/self/fd/1}
 access.format = "%R - %u %t \"%m %r%Q%q\" %s %{mili}d %{kilo}M %C%%"
+access.log = ${PHP_FPM_ACCESS_LOG}
