--- a/src/php/dev.ini
+++ b/src/php/dev.ini
@@ -3,25 +3,10 @@
 ;==============================================================================
 
 [PHP]
-; Basic settings
-max_execution_time = 300
-max_input_time = 300
-max_input_vars = 10000
-memory_limit = 512M
-post_max_size = 128M
-upload_max_filesize = 128M
-
-; Error handling
-display_errors = On
-display_startup_errors = On
-error_log = /var/log/apache2/php_errors.log
-error_reporting = E_ALL
-log_errors = On
-
-; Development settings
 allow_url_fopen = On
 allow_url_include = Off
-expose_php = On
+max_file_uploads = 20
+max_input_vars = 10000
 
 [Date]
 date.timezone = UTC
@@ -37,20 +22,10 @@ session.use_strict_mode = 1
 opcache.enable = 1
 opcache.enable_cli = 1
 opcache.interned_strings_buffer = 16
+opcache.jit = tracing
+opcache.jit_buffer_size = 128M
 opcache.max_accelerated_files = 20000
 opcache.memory_consumption = 256
 opcache.revalidate_freq = 2
 opcache.save_comments = 1
 opcache.validate_timestamps = 1
-
-; JIT for PHP 8.4+
-opcache.jit = tracing
-opcache.jit_buffer_size = 128M
-
-[xdebug]
-xdebug.client_host = host.docker.internal
-xdebug.client_port = 9003
-xdebug.idekey = PHPSTORM
-xdebug.log_level = 0
-xdebug.mode = debug,develop,coverage
-xdebug.start_with_request = yes
