--- a/src/php/prod.ini
+++ b/src/php/prod.ini
@@ -3,26 +3,11 @@
 ;==============================================================================
 
 [PHP]
-; Basic settings
-max_execution_time = 60
-max_input_time = 60
-max_input_vars = 5000
-memory_limit = 256M
-post_max_size = 64M
-upload_max_filesize = 64M
-
-; Error handling
-display_errors = Off
-display_startup_errors = Off
-error_log = /var/log/apache2/php_errors.log
-error_reporting = E_ALL & ~E_DEPRECATED & ~E_STRICT
-log_errors = On
-
-; Security
 allow_url_fopen = Off
 allow_url_include = Off
 disable_functions = exec,passthru,shell_exec,system,proc_open,popen,parse_ini_file,show_source
-expose_php = Off
+max_file_uploads = 20
+max_input_vars = 5000
 
 [Date]
 date.timezone = UTC
@@ -41,11 +26,9 @@ opcache.enable = 1
 opcache.enable_cli = 0
 opcache.enable_file_override = 1
 opcache.interned_strings_buffer = 32
+opcache.jit = tracing
+opcache.jit_buffer_size = 256M
 opcache.max_accelerated_files = 20000
 opcache.memory_consumption = 256
 opcache.save_comments = 0
 opcache.validate_timestamps = 0
-
-; JIT for PHP 8.4+
-opcache.jit = tracing
-opcache.jit_buffer_size = 256M
