--- a/src/php/xdebug.ini
+++ b/src/php/xdebug.ini
@@ -2,11 +2,11 @@
 ; Xdebug configuration
 ;==============================================================================
 
+[xdebug]
 xdebug.client_host = host.docker.internal
 xdebug.client_port = 9003
-xdebug.discover_client_host = 0
 xdebug.idekey = PHPSTORM
-xdebug.log_level = 0
-xdebug.mode = debug,develop,coverage
+xdebug.log_level = 1
+xdebug.mode = debug,develop,coverage,profile
+xdebug.output_dir = /tmp/xdebug
 xdebug.start_with_request = yes
-zend_extension=xdebug.so
