Apply fixed review coderabbitai.

--- a/src/php/prod.ini
+++ b/src/php/prod.ini
@@ -5,7 +5,7 @@
 [PHP]
 allow_url_fopen = Off
 allow_url_include = Off
-disable_functions = exec,passthru,shell_exec,system,proc_open,popen,parse_ini_file,show_source
+disable_functions = exec,passthru,shell_exec,system,parse_ini_file,show_source
 max_file_uploads = 20
 max_input_vars = 5000
 
