--- a/src/flavor/apache/etc/vhost.conf
+++ b/src/flavor/apache/etc/vhost.conf
@@ -36,10 +36,10 @@
             RewriteRule .* - [F,L]
 
             # Block suspicious user agents
+            RewriteCond %{REQUEST_URI} !^/health$ [NC]
             RewriteCond %{HTTP_USER_AGENT} ^$ [OR]
             RewriteCond %{HTTP_USER_AGENT} ^(java|curl|wget) [NC,OR]
             RewriteCond %{HTTP_USER_AGENT} (libwww|lwp-trivial|echo|bot|wget|curl|python|perl|scan) [NC]
-            RewriteRule .* - [F,L]
 
             # Redirect trailing slashes if not a directory
             RewriteCond %{REQUEST_FILENAME} !-d
@@ -120,10 +120,7 @@
         # Additional security headers
         Header always set Permissions-Policy "camera=(), microphone=(), geolocation=()"
 
-        # Content Security Policy for Yii2 applications
-        Header always set Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self'; frame-ancestors 'self'"
-
-        # If using CDNs like jsDelivr, adjust CSP accordingly
+        # CSP (adjust sources via separate conf if needed)
         Header always set Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; img-src 'self' data: https:; font-src 'self' data: https://cdn.jsdelivr.net; connect-src 'self'; frame-ancestors 'self'"
     </IfModule>
 
