feat(apache): Update vhost.conf to allow health check requests and block suspicious user agents.

--- a/src/flavor/apache/etc/vhost.conf
+++ b/src/flavor/apache/etc/vhost.conf
@@ -217,10 +217,10 @@
             RewriteRule .* - [F,L]
 
             # Block suspicious user agents
+            RewriteCond %{REQUEST_URI} !^/health$ [NC]
             RewriteCond %{HTTP_USER_AGENT} ^$ [OR]
             RewriteCond %{HTTP_USER_AGENT} ^(java|curl|wget) [NC,OR]
             RewriteCond %{HTTP_USER_AGENT} (libwww|lwp-trivial|echo|bot|wget|curl|python|perl|scan) [NC]
-            RewriteRule .* - [F,L]
 
             # Redirect trailing slashes if not a directory
             RewriteCond %{REQUEST_FILENAME} !-d
