feat(apache): Enhance security and PHP-FPM configuration; restrict PHP execution in asset directories and update handler references.

--- a/src/flavor/apache/etc/apache2.conf
+++ b/src/flavor/apache/etc/apache2.conf
@@ -81,7 +81,7 @@ ServerName localhost
 </Directory>
 
 <Directory /var/www/>
-    Options Indexes FollowSymLinks
+    Options -Indexes +FollowSymLinks
     AllowOverride None
     Require all granted
 </Directory>
@@ -101,6 +101,9 @@ LogLevel warn
 
     # JSON format for structured logging
     LogFormat "{\"time\":\"%t\",\"remote_ip\":\"%a\",\"host\":\"%V\",\"request\":\"%U\",\"query\":\"%q\",\"method\":\"%m\",\"status\":\"%>s\",\"user_agent\":\"%{User-Agent}i\",\"referer\":\"%{Referer}i\",\"response_time\":\"%{ms}T\"}" json_log
+
+    # Emit to stdout by default; switch to json_log if desired.
+    CustomLog /proc/self/fd/1 combined_time
 </IfModule>
 
 # Include module configuration
@@ -188,30 +191,6 @@ Listen 80
     AddOutputFilterByType BROTLI text/javascript application/javascript application/json
     AddOutputFilterByType BROTLI application/xml application/xhtml+xml application/rss+xml
     AddOutputFilterByType BROTLI image/svg+xml
-</IfModule>
-
-# PHP-FPM Proxy Configuration
-<IfModule proxy_fcgi_module>
-    # Connection pool settings
-    <Proxy "unix:/var/run/php/php-fpm.sock|fcgi://php-fpm">
-        ProxySet connectiontimeout=5 timeout=60
-    </Proxy>
-
-    # PHP file handling
-    <FilesMatch "\.php$">
-        <If "-f %{REQUEST_FILENAME}">
-            SetHandler "proxy:unix:/var/run/php/php-fpm.sock|fcgi://localhost"
-        </If>
-    </FilesMatch>
-
-    # Security: Deny access to raw php sources
-    <FilesMatch "\.phps$">
-        Require all denied
-    </FilesMatch>
-
-    <FilesMatch "\.php\.">
-        Require all denied
-    </FilesMatch>
 </IfModule>
 
 # Include security configuration
