--- a/src/flavor/apache/etc/php-fpm-proxy.conf
+++ b/src/flavor/apache/etc/php-fpm-proxy.conf
@@ -10,7 +10,7 @@
 # Handle PHP files
 <FilesMatch "\.php$">
     <If "-f %{REQUEST_FILENAME}">
-        SetHandler "proxy:unix:/var/run/php/php-fpm.sock|fcgi://localhost"
+        SetHandler "proxy:unix:/var/run/php/php-fpm.sock|fcgi://php-fpm"
     </If>
 </FilesMatch>
 
@@ -30,7 +30,7 @@
 </Files>
 
 # Pass Authorization header to PHP
-SetEnvIfNoCase ^Authorization$ "(.+)" HTTP_AUTHORIZATION=$1
+ProxyFCGISetEnvIf Authorization "(.+)" HTTP_AUTHORIZATION=$1
 
 # Directory index for PHP
 DirectoryIndex index.php index.html
@@ -38,12 +38,12 @@ DirectoryIndex index.php index.html
 # PHP-FPM status and ping pages (development only)
 <IfDefine ENABLE_FPM_STATUS>
     <Location /fpm-status>
-        SetHandler "proxy:unix:/var/run/php/php-fpm.sock|fcgi://localhost"
+        SetHandler "proxy:unix:/var/run/php/php-fpm.sock|fcgi://php-fpm"
         Require local
     </Location>
 
     <Location /fpm-ping>
-        SetHandler "proxy:unix:/var/run/php/php-fpm.sock|fcgi://localhost"
+        SetHandler "proxy:unix:/var/run/php/php-fpm.sock|fcgi://php-fpm"
         Require local
     </Location>
 </IfDefine>
