--- a/src/flavor/apache/etc/security-enhanced.conf
+++ b/src/flavor/apache/etc/security-enhanced.conf
@@ -53,8 +53,15 @@ TraceEnable Off
 #==============================================================================
 
 # Protect Yii2 framework directories
-<DirectoryMatch "/(runtime|vendor|tests|config|models|controllers|commands|migrations|mail|widgets|assets/.*\.php)">
+<DirectoryMatch "/(runtime|vendor|tests|config|models|controllers|commands|migrations|mail|widgets)">
     Require all denied
+</DirectoryMatch>
+
+# Protect Yii2 asset directories from executing PHP files
+<DirectoryMatch "/assets/">
+    <FilesMatch "\.php$">
+        Require all denied
+    </FilesMatch>
 </DirectoryMatch>
 
 # Protect Yii2 console script
