--- a/src/flavor/apache/Dockerfile.apache
+++ b/src/flavor/apache/Dockerfile.apache
@@ -21,7 +21,7 @@ ENV DEBIAN_FRONTEND=noninteractive \
     PHP_DISABLE_FUNCTIONS=exec,passthru,shell_exec,system,proc_open,popen,parse_ini_file,show_source \
     PHP_DISPLAY_ERRORS=off \
     PHP_DISPLAY_STARTUP_ERRORS=off \
-    PHP_ERROR_REPORTING="E_ALL & ~E_DEPRECATED & ~E_STRICT" \
+    PHP_ERROR_REPORTING="E_ALL & ~E_DEPRECATED" \
     PHP_EXPOSE=off \
     PHP_LOG_ERRORS=on \
     PHP_MAX_EXECUTION_TIME=30 \
@@ -216,6 +216,6 @@ WORKDIR /var/www/app
 EXPOSE 80 443
 
 HEALTHCHECK --interval=30s --timeout=3s --start-period=40s --retries=3 \
-    CMD curl -f http://localhost/health || exit 1
+    CMD curl -f -A healthcheck http://localhost/health || exit 1
 
 ENTRYPOINT ["entrypoint"]
