--- a/src/flavor/apache/etc/apache2/apache2.conf
+++ b/src/flavor/apache/etc/apache2/apache2.conf
@@ -156,45 +156,45 @@ Listen 80
     AddType application/font-woff2 .woff2
 </IfModule>
 
-# Compression Configuration - Critical for HTTP/2
-<IfModule deflate_module>
-    # Enable compression
-    SetOutputFilter DEFLATE
-
-    # Don't compress images
-    SetEnvIfNoCase Request_URI \.(?:gif|jpe?g|png|webp|woff2?)$ no-gzip dont-vary
-
-    # Compress everything else
-    AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css
-    AddOutputFilterByType DEFLATE text/javascript application/javascript application/json
-    AddOutputFilterByType DEFLATE application/xml application/xhtml+xml application/rss+xml
-    AddOutputFilterByType DEFLATE application/x-font-ttf application/vnd.ms-fontobject
-    AddOutputFilterByType DEFLATE image/svg+xml
-    AddOutputFilterByType DEFLATE application/x-font-opentype application/x-font-truetype
-
-    # Compression level
-    DeflateCompressionLevel 6
-
-    # Handle proxies
-    Header append Vary User-Agent env=!dont-vary
-</IfModule>
-
 # Brotli compression if available (better than gzip)
 <IfModule brotli_module>
-    SetOutputFilter BROTLI
     SetEnvIfNoCase Request_URI \.(?:gif|jpe?g|png|webp|woff2?)$ no-br
 
     BrotliCompressionLevel 6
     BrotliWindowSize 22
 
+    # only compress text, html, javascript, css, xml, fonts, svg
     AddOutputFilterByType BROTLI text/html text/plain text/xml text/css
     AddOutputFilterByType BROTLI text/javascript application/javascript application/json
     AddOutputFilterByType BROTLI application/xml application/xhtml+xml application/rss+xml
     AddOutputFilterByType BROTLI image/svg+xml
+
+    Header merge Vary "Accept-Encoding"
+</IfModule>
+
+# Fallback to gzip if Brotli is not available
+<IfModule !brotli_module>
+    <IfModule deflate_module>
+        SetEnvIfNoCase Request_URI \.(?:gif|jpe?g|png|webp|woff2?)$ no-gzip dont-vary
+
+        # only compress text, html, javascript, css, xml, fonts, svg
+        AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css
+        AddOutputFilterByType DEFLATE text/javascript application/javascript application/json
+        AddOutputFilterByType DEFLATE application/xml application/xhtml+xml application/rss+xml
+        AddOutputFilterByType DEFLATE application/x-font-ttf application/vnd.ms-fontobject
+        AddOutputFilterByType DEFLATE image/svg+xml
+        AddOutputFilterByType DEFLATE application/x-font-opentype application/x-font-truetype
+
+        DeflateCompressionLevel 6
+        Header merge Vary "Accept-Encoding"
+    </IfModule>
 </IfModule>
 
 # Include security configuration
-Include /etc/apache2/conf-available/security-enhanced.conf
+Include /etc/apache2/conf-available/security.conf
+
+# Include PHP-FPM proxy configuration
+Include /etc/apache2/conf-available/php-fpm-proxy.conf
 
 # Include other configuration files
 IncludeOptional conf-enabled/*.conf
