--- a/src/flavor/apache/etc/apache2/conf-available/php-fpm-proxy.conf
+++ b/src/flavor/apache/etc/apache2/conf-available/php-fpm-proxy.conf
@@ -30,7 +30,7 @@
 </Files>
 
 # Pass Authorization header to PHP
-ProxyFCGISetEnvIf Authorization "(.+)" HTTP_AUTHORIZATION=$1
+ProxyFCGISetEnvIf "req('Authorization') =~ /.+/" HTTP_AUTHORIZATION=%{HTTP:Authorization}
 
 # Directory index for PHP
 DirectoryIndex index.php index.html
