--- a/src/flavor/apache/etc/apache2/conf-available/security.conf
+++ b/src/flavor/apache/etc/apache2/conf-available/security.conf
@@ -28,6 +28,11 @@ TraceEnable Off
     Require all denied
 </FilesMatch>
 
+# Protect CI/CD directories and their contents
+<DirectoryMatch "/(\.github|\.circleci)/">
+    Require all denied
+</DirectoryMatch>
+
 # Protect package manager files
 <FilesMatch "^(composer\.(json|lock)|package\.(json|lock)|yarn\.lock|pnpm-lock\.yaml|bower\.json)$">
     Require all denied
