feat(build): Add conditional cache clearing for full builds and remove obsolete MSSQL and Oracle installation scripts.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -109,4 +109,5 @@ jobs:
         fi
 
     - name: Clear old GitHub Actions caches.
+      if: ${{ matrix.build_type == 'full' }}
       uses: easimon/wipe-cache@main
