--- a/src/flavor/apache/etc/apache2/conf-available/security.conf
+++ b/src/flavor/apache/etc/apache2/conf-available/security.conf
@@ -107,16 +107,13 @@ TraceEnable Off
 
 <IfModule mod_headers.c>
     # Prevent MIME type sniffing
-    Header always set X-Content-Type-Options "nosniff"
+    Header always setifempty X-Content-Type-Options "nosniff"
 
     # Prevent clickjacking attacks
-    Header always set X-Frame-Options "SAMEORIGIN"
-
-    # Enable XSS filtering
-    Header always set X-XSS-Protection "1; mode=block"
+    Header always setifempty X-Frame-Options "SAMEORIGIN"
 
     # Referrer policy for privacy
-    Header always set Referrer-Policy "strict-origin-when-cross-origin"
+    Header always setifempty Referrer-Policy "strict-origin-when-cross-origin"
 
     # Remove server information from headers
     Header always unset "X-Powered-By"
@@ -124,11 +121,10 @@ TraceEnable Off
     Header always unset "Server"
 
     # Permissions policy (formerly Feature Policy)
-    Header always set Permissions-Policy "camera=(), microphone=(), geolocation=(), interest-cohort=()"
+    Header always setifempty Permissions-Policy "camera=(), microphone=(), geolocation=(), interest-cohort=()"
 
-    # Content Security Policy - Basic but secure
-    # Note: Adjust this based on your application's specific needs
-    Header always set Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self'; frame-ancestors 'self'"
+    # Prefer defining CSP once (vhost or separate csp.conf). If kept here, use setifempty and align sources with app needs.
+    Header always setifempty Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self'; frame-ancestors 'self'"
 
     # Cross-Origin policies
     Header always set Cross-Origin-Embedder-Policy "require-corp"
